Fix width aplication on mobile and tablet

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -314,7 +314,7 @@
 @media (max-width: 466px) {
   .mainContainer {
     position: relative;
-    width: 100vw;
+    width: 98vw;
     height: 50vh;
   }
   .mainContainer_text {
@@ -350,7 +350,7 @@
 @media (min-width: 465px) and (max-width: 768px) {
   .mainContainer {
     position: relative;
-    width: 99vw;
+    width: 98vw;
     height: 50vh;
   }
   .mainContainer_text {
@@ -360,7 +360,6 @@
   .mainContainer_button {
     width: 100%;
     height: 35px;
-    margin-top: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
