--- a/src/scss/FlashCard.scss
+++ b/src/scss/FlashCard.scss
@@ -79,7 +79,7 @@ $desktop-width: 1024px;
 @media (max-width: $phone-width) {
   .mainContainer {
     position: relative;
-    width: 100vw;
+    width: 98vw;
     height: 50vh;
 
     &_text {
@@ -90,6 +90,7 @@ $desktop-width: 1024px;
     &_button {
       width: 100%;
       height: 60px;
+      
       margin-top: 2rem;
       display: flex;
       justify-content: center;
@@ -119,7 +120,7 @@ $desktop-width: 1024px;
 @media (min-width: $phone-width-1) and (max-width: $tablet-width) {
   .mainContainer {
     position: relative;
-    width: 99vw;
+    width: 98vw;
     height: 50vh;
 
     &_text {
@@ -130,7 +131,7 @@ $desktop-width: 1024px;
     &_button {
       width: 100%;
       height: 35px;
-      margin-top: 100px;
+
       display: flex;
       justify-content: center;
       align-items: center;
